<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="imageAndTitleViewModel"
            type="com.example.cvsflicker.viewmodel.ShowImagesViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ShowImagesActivity">

    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/tv_search_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/activity_ishow_images_search_photos"
            android:maxLines="1"
            android:contentDescription="@string/search_edit_text"
            android:digits="0123456789qwertzuiopasdfghjklyxcvbnm,"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/search_button"
            android:background="@drawable/button_shape"
            android:text="@string/activity_show_images_search" />

    </LinearLayout>
<LinearLayout
    android:id="@+id/ll_search_result"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/border_background"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/ll_search">
    <TextView
        android:id="@+id/tv_recent_search"
        style="@style/TextViewStyle"
        android:contentDescription="@string/recent_searches"
        android:text="@string/activity_show_images_recent_text" />
    <ListView
        android:id="@+id/lw_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/recent_searches_list"
        android:visibility="gone"/>
</LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_imageAndTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="120dp"
        android:clipToPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_search_result"
        app:setAdapter ='@{imageAndTitleViewModel.getAdapter()}' />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>